fixed buttons on mobile iste

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -190,6 +190,7 @@ nav {
       margin: 20px;
       color: $primary-color;
       padding: 0 10px;
+      background-color: $fourth-color;
 
       &:first-child {
         margin-left: 0px;
